Bug 649056 - spacing adjustments
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@87147 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/webhero.css
+++ b/style/covehead/webhero.css
@@ -10,14 +10,14 @@
 	font-style: normal;
 }
 
-#webhero-wrap { margin-top: 20px; padding-top: 615px; position: relative; font-size: 16px; line-height: 1.375; background: url("/img/firefox/webhero/webhero.jpg") 0 200px no-repeat; }
+#webhero-wrap { margin-top: 20px; padding-top: 605px; position: relative; font-size: 16px; line-height: 1.375; background: url("/img/firefox/webhero/webhero.jpg") 0 200px no-repeat; }
 #webhero .page-title { position: absolute; left: -999em; }
-#webhero h2 { margin: 0 0 .15em; font: normal 48px/.9 "League Gothic", "Trebuchet MS", "Arial Narrow", sans-serif; text-transform: uppercase; color: #506071; }
+#webhero h2 { margin: 0 0 .15em; font: normal 48px/.9 "League Gothic", Haettenschweiler, "Arial Narrow", sans-serif; text-transform: uppercase; color: #506071; }
 
-.step { display: block; position: relative; }
+.step { position: relative; }
 #step1 { position: absolute; top: 0; min-height: 165px; padding: 35px 115px 0 250px; background: url("/img/firefox/webhero/bg-step1.png") left bottom no-repeat; }
-#step2 { min-height: 265px; padding: 0 315px 0 230px; }
-#step3 { min-height: 395px; padding: 0 400px 0 45px; }
+#step2 { min-height: 250px; padding: 10px 315px 10px 230px; }
+#step3 { min-height: 375px; padding: 10px 400px 10px 45px; }
 .checklist { position: relative; margin: -5px 0 0 160px; width: 545px; list-style: none; color: #897a0d; line-height: 1.3; }
 .checklist a:link, .checklist a:visited { color: #e5562c; text-decoration: underline; font-weight: bold; }
 .checklist a:hover, .checklist a:focus, .checklist a:active { color: #af4222; }
